--- a/reports/010/reproreview-agile-2022-010.Rmd
+++ b/reports/010/reproreview-agile-2022-010.Rmd
@@ -48,22 +48,21 @@ knitr::include_graphics(temp)
 
 This report is part of the reproducibility review at the AGILE conference.
 For more information see [https://reproducible-agile.github.io/](https://reproducible-agile.github.io/).
-This document is published on OSF at OSF LINK HERE.
+This document is published on OSF at https://osf.io/jdtn3/.
 To cite the report use
 
 > Granell, C. (2022, May 13). Reproducilbility review of: Optimizing Electric Vehicle Charging Schedules Based on
-Probabilistic Forecast of Individual Mobility,
+Probabilistic Forecast of Individual Mobility. https://doi.org/10.17605/OSF.IO/JDTN3
 
 # Reviewed paper
 
-Cai, H., Xin, Y., Martin, H.,  and Raubal, M.: Optimizing Electric Vehicle Charging Schedules Based on Probabilistic Forecast of Individual Mobility, AGILE GIScience Ser., 3
+> Cai, H., Xin, Y., Martin, H.,  and Raubal, M.: Optimizing Electric Vehicle Charging Schedules Based on Probabilistic Forecast of Individual Mobility, AGILE GIScience Ser., 3
 
 # Summary
 
 The authors included a Data and Software Availability ("DASA") section, where a link to an anonymous github repo was provided. It contains a landing page with detailed instructions and an entry point (`main` script) to run the entire analysis. The authors also specified which scripts are involved in the different outputs of the paper (tables, figures, etc). The authors claimed that input data cannot be disclosed. After communicating with authors, they provided me a few synthetic input samples (CSV format) to run the probabilistic models and charging strategies for simulation and evaluation, therefore skipping the need to access and getting real data from a remote database, as coded in the original `main` scripts. Because only synthetic samples are provided, there are differences between the results of the reproduction and the ones in the original paper.
 
 The reproduction described in this report uses the Python code provided in a Github repo. Even though the reproduction exercise with synthetic data failed during the last step of the script, I can consider the paper was *partially reproducible* based on the synthetic data prepared by the authors. 
-
 
 \clearpage
 
@@ -1214,7 +1213,6 @@ IndexError: index 0 is out of bounds for axis 0 with size 0
 
 The exception raised appears to be related to an error in the contained data in one of the synthetic data files.
 
-
 ```{r, echo=FALSE, eval=FALSE, results='hide'}
 # create ZIP of reproduction files and upload to OSF
 library("zip")
@@ -1230,15 +1228,14 @@ library("osfr") # See docs at https://docs.ropensci.org/osfr/
 # We cannot use osfr to create a new component (with osfr::osf_create_component(x = osfr::osf_retrieve_node("6k5fh"), ...) because that will set the storage location to outside Europe.
 
 # retrieve project
-project <- osfr::osf_retrieve_node("OSF ID")
+project <- osfr::osf_retrieve_node("jdtn3")
 
 # upload files
 osfr::osf_upload(x = project,
                  conflicts = "overwrite",
-                 path = c(list.files(here::here("PATH"),
-                                     pattern = "agile-reproreview-.*(pdf$|Rmd$|zip$)",
-                                     full.names = TRUE),
-                          "COPYRIGHT"
+                 path = c(list.files(here::here("010"),
+                                     pattern = ".*reproreview-.*(pdf$|Rmd$|zip$)",
+                                     full.names = TRUE)
                           )
                  )
 ```
